--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,24 @@ main {
     width: 1000px;
     margin: auto;
 }
+
+/* Card styles */
+.card {
+    margin: 30px 0px;
+    overflow: auto;
+}
+
+.image {
+    float: left;
+    width: 500px;
+    height: 550px;
+}
+
+.recipe {
+    float: left;
+    box-sizing: border-box;
+    padding: 20px;
+    width: 500px;
+    height: 550px;
+    background-color: #fff;
+}
